# PDI

./: README.md  main.cpp
src/: CMakeLists.txt  basic_operations.cpp  basic_operations.hpp  constants.hpp  effects.hpp  image_arithmatic.cpp  image_arithmatic.hpp  image_operations.cpp  image_operations.hpp  main.cpp
src/include/: basic_operations.hpp  effects.hpp  image_arithmatic.hpp  image_operations.hpp
